<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".pensamientos.CrearEventoPensmientosActivity">

    <TextView
        android:id="@+id/txt_crear_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_title_crear_evento"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nombre_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_nombre_del_evento"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_crear_evento" />

    <EditText
        android:id="@+id/edit_descripcion"
        android:layout_width="341dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_redondo_descripcion"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_seleccion" />

    <EditText
        android:id="@+id/txt_nombre_pensamientos"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_redondo_crear_pausa"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_evento" />

    <TextView
        android:id="@+id/txt_seleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_descricion_pensamientos"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_pensamientos" />

    <ImageButton
        android:id="@+id/btn_crear_pensamientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_descripcion"
        app:srcCompat="@drawable/crear" />


</androidx.constraintlayout.widget.ConstraintLayout>