...
            android:hint="@string/txt_buscar"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/txt_pensamientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_title_Pensamientos"
            android:textSize="30sp" />

...

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_crearlista_pensamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
...
