<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".pausas.CrearEventoPusaActivity">

    <TextView
        android:id="@+id/txt_crear_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_title_crear_evento"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nombre_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_nombre_del_evento"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_crear_evento" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_redondo_crear_pausa"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_evento" />

    <TextView
        android:id="@+id/txt_seleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:backgroundTint="#63000000"
        android:text="@string/txt_seleccion"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:background="#000000"
        android:backgroundTint="#63000000"
        android:gravity="center"
        android:text="Selecciona la hora"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_seleccion" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="#000000"
        android:backgroundTint="#63000000"
        android:gravity="center"
        android:text="Selecciona el Dia"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_seleccion" />

    <ImageView
        android:id="@+id/btn_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/btn_hora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/boton_dia" />

    <ImageView
        android:id="@+id/btn_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/boton_noche" />

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:text="Dia seleccionado"
        android:textAlignment="center"
        android:textColor="#F50057"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_horaf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fecha" />

    <TextView
        android:id="@+id/txt_horaf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:text="Hora seleccionada"
        android:textAlignment="center"
        android:textColor="#F50057"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hora" />

    <ImageButton
        android:id="@+id/btn_crear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/crear" />

</androidx.constraintlayout.widget.ConstraintLayout>