...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txt_title_pausas_act"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/edit_buscar"
        app:layout_constraintVertical_bias="1.0">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_crearlista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="550dp"
        android:clickable="true"
        android:contentDescription="1"
...
