...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_salud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_salud"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/txt_salud"
        app:layout_constraintVertical_bias="1.0">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_crearlista_salud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="500dp"
        android:clickable="true"
        android:contentDescription="agregar"
...
